@@ -99,8 +99,8 @@ class ListDiffer implements Differ {
 	 * @param array $oldValues The first array
 	 * @param array $newValues The second array
 	 *
-	 * @throws Exception
 	 * @return DiffOp[]
+	 * @throws \Exception
 	 */
 	public function doDiff( array $oldValues, array $newValues ) {
 		$operations = array();
