@@ -88,8 +88,8 @@ class MapDiffer implements Differ {
 	 * @param array $oldValues The first array
 	 * @param array $newValues The second array
 	 *
-	 * @throws Exception
 	 * @return DiffOp[]
+	 * @throws \Exception
 	 */
 	public function doDiff( array $oldValues, array $newValues ) {
 		$newSet = $this->array_diff_assoc( $newValues, $oldValues );
