@@ -16,6 +16,7 @@ dev
   is now private rather than public.
 * Adding a non-DiffOp element to a Diff will now result in an InvalidArgumentException
   rather than a MWException.
+* Removed Diff\Exception
 
 === Version 0.5 ===
 2013-02-26
